--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -38,161 +38,163 @@
                     <i class="fas fa-heart heart-fill"></i>
                 </div>
             </div>
-            <section class="menu__starters">
-                <h3 class="menu__title--categorie">ENTRÉES</h3>
-                <div class="box-list">
-                    <div class="box delay-1">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Ravioles de foie gras </h3>
-                                <p>Accompagnés de leur crème à la truffe</p>
+            <div class="menu__container">
+                <section class="menu__starters">
+                    <h3 class="menu__title--categorie">ENTRÉES</h3>
+                    <div class="box-list">
+                        <div class="box delay-1">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Ravioles de foie gras </h3>
+                                    <p>Accompagnés de leur crème à la truffe</p>
+                                </div>
+                                <div class="price">
+                                    <p>25<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>25<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-2">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Caviar osciètre </h3>
+                                    <p>Sur blini à la farine de blé noir</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-3">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Homard et espuma de potiron</h3>
+                                    <p>Mariné aux zestes d'orange</p>
+                                </div>
+                                <div class="price">
+                                    <p>20<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-4">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Foie gras de canard cuit entier</h3>
+                                    <p>Confiture de figue et pain toasté</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-2">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Caviar osciètre </h3>
-                                <p>Sur blini à la farine de blé noir</p>
+                </section>
+                <section class="menu__dishes">
+                    <h2 class="menu__title--categorie">PLATS</h2>
+                    <div class="box-list">
+                        <div class="box delay-5">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Noix de coquilles Saint-Jacques</h3>
+                                    <p>Sur lit de purée de céleri-rave</p>
+                                </div>
+                                <div class="price">
+                                    <p>40<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-6">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Langoustine poêlée</h3>
+                                    <p>Purée de patate douce</p>
+                                </div>
+                                <div class="price">
+                                    <p>35<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-7">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Mijoté de queue de boeuf </h3>
+                                    <p>Et riz sauvage aux zestes de citron</p>
+                                </div>
+                                <div class="price">
+                                    <p>44<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-3">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Homard et espuma de potiron</h3>
-                                <p>Mariné aux zestes d'orange</p>
+                </section>
+                <section class="menu__desserts">
+                    <h2 class="menu__title--categorie">DESSERTS</h2>
+                    <div class="box-list">
+                        <div class="box delay-8">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Macaron noisette et chocolat</h3>
+                                    <p>Glace au caramel brun et sel de Guérande</p>
+                                </div>
+                                <div class="price">
+                                    <p>18<span>€</span></p>
+                                </div>
                             </div>
-                            <div class="price">
-                                <p>20<span>€</span></p>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
                             </div>
                         </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
+                        <div class="box delay-9">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Baba au rhum revisité </h3>
+                                    <p>Avec son coulis de citron</p>
+                                </div>
+                                <div class="price">
+                                    <p>22<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </div>
+                        <div class="box delay-10">
+                            <div class="box__container">
+                                <div class="box__content">
+                                    <h3>Tarte au citron meringuée </h3>
+                                    <p>Déstructurée</p>
+                                </div>
+                                <div class="price">
+                                    <p>23<span>€</span></p>
+                                </div>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check"></i>
+                            </div>
                         </div>
                     </div>
-                    <div class="box delay-4">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Foie gras de canard cuit entier</h3>
-                                <p>Confiture de figue et pain toasté</p>
-                            </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="menu__dishes">
-                <h2 class="menu__title--categorie">PLATS</h2>
-                <div class="box-list">
-                    <div class="box delay-5">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Noix de coquilles Saint-Jacques</h3>
-                                <p>Sur lit de purée de céleri-rave</p>
-                            </div>
-                            <div class="price">
-                                <p>40<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-6">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Langoustine poêlée</h3>
-                                <p>Purée de patate douce</p>
-                            </div>
-                            <div class="price">
-                                <p>35<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-7">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Mijoté de queue de boeuf </h3>
-                                <p>Et riz sauvage aux zestes de citron</p>
-                            </div>
-                            <div class="price">
-                                <p>44<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="menu__desserts">
-                <h2 class="menu__title--categorie">DESSERTS</h2>
-                <div class="box-list">
-                    <div class="box delay-8">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Macaron noisette et chocolat</h3>
-                                <p>Glace au caramel brun et sel de Guérande</p>
-                            </div>
-                            <div class="price">
-                                <p>18<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-9">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Baba au rhum revisité </h3>
-                                <p>Avec son coulis de citron</p>
-                            </div>
-                            <div class="price">
-                                <p>22<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                    <div class="box delay-10">
-                        <div class="box__container">
-                            <div class="box__content">
-                                <h3>Tarte au citron meringuée </h3>
-                                <p>Déstructurée</p>
-                            </div>
-                            <div class="price">
-                                <p>23<span>€</span></p>
-                            </div>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
+                </section>
+            </div>
             <div class="menu__btn">
                 <button class="btn"><a href="#">Commander</a></button>
             </div>
